--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <source srcset="./images/pattern-divider-desktop.svg" media="(min-width: 992px)">
       <img src="./images/pattern-divider-mobile.svg" alt="An Icon that divides the advice from the generate new advice button">
     </picture>
-    <button class="dice_button">
+    <button class="dice_button" aria-label="Generate New Advice">
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M20 0H4a4.005 4.005 0 0 0-4 4v16a4.005 4.005 0 0 0 4 4h16a4.005 4.005 0 0 0 4-4V4a4.005 4.005 0 0 0-4-4ZM7.5 18a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z" fill="#202733"/></svg>
     </button>
   </main>
